--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-25 [暌违五年美台重启经贸咨商 TIFA会谈30日举行](/articles/voa/1039894.md)
+
 6-25 [联合国人权高专办：即便不去新疆也能够拿到维族人遭受迫害的证据](/articles/voa/1039895.md)
 
 6-25 [中共党庆前重大事故防不胜防，河南武术馆火灾酿18死](/articles/voa/1039896.md)
@@ -598,6 +600,4 @@
 6-12 [七大工业国集团将向全球捐赠十亿剂新冠疫苗](/articles/voa/1040192.md)
 
 6-11 [美澳海军完成南中国海联合军演，美舰长强调共同价值观至关重要](/articles/voa/1040193.md)
-
-6-11 [国际特赦组织：对新疆穆斯林大规模迫害构成危害人类罪](/articles/voa/1040194.md)
 
