--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-26 [期盼中共不再存在这一天：美两党众议员在中共百年党庆之际推出决议谴责中共践踏人权史](/articles/voa/1039888.md)
+
 6-26 [香港政府高层人事重组 警察出身官员升任公务员之首被指武官治港](/articles/voa/1039889.md)
 
 6-26 [政治敌不过胃口，澳大利亚龙虾神奇重返中国人餐桌](/articles/voa/1039890.md)
@@ -598,6 +600,4 @@
 6-12 [布林肯向杨洁篪提病毒溯源调查 专家：中国不合作美国仍有办法](/articles/voa/1040186.md)
 
 6-12 [美司法部调查众院民主党人通讯数据被秘密截取一事](/articles/voa/1040187.md)
-
-6-12 [北约秘书长：北约峰会正值联盟“关键时刻”](/articles/voa/1040188.md)
 
