--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-26 [法国社保局赤字因新冠创历史新高 计划2022节约10亿欧元](/articles/rfi/1027364.md)
+
+6-26 [Covid-19 : 葡萄牙因Delta变异恢复限制](/articles/rfi/1027365.md)
+
+6-26 [夏明：中共面临的挑战，是自我的生存问题 - 公民论坛](/articles/rfi/1027366.md)
+
 6-26 [买盘介入 欧股多数收红 – 法国国际广播电台 - RFI](/articles/rfi/1027367.md)
 
 6-25 [以色列发现前所未知新种早期智人 – 法国国际广播电台 - RFI](/articles/rfi/1027368.md)
@@ -594,10 +600,4 @@
 6-21 [瑞典总理面临挫败 国会通过不信任案 – 法国国际广播电台 - RFI](/articles/rfi/1027662.md)
 
 6-21 [西方敦促伊朗尽快达成核协议](/articles/rfi/1027663.md)
-
-6-21 [风水轮流转：法国铁路夜车失宠多年重得青睐 - 今日经济](/articles/rfi/1027664.md)
-
-6-21 [中国扩大打击加密货币挖矿 比特币价格跳水 – 法国国际广播电台 - RFI](/articles/rfi/1027665.md)
-
-6-21 [《苹果》可能本周六结业 员工可即日请辞](/articles/rfi/1027666.md)
 
