--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-26 [新冠病毒来源论 权威柳叶刀是否变成谄媚北京《有用白痴》 法媒提问 - 中华世界](/articles/rfi/1027349.md)
+
+6-26 [以色列和中国的人类物种新发现引质疑：古生物学也有冷战？](/articles/rfi/1027350.md)
+
 6-26 [弗洛伊德案： 涉事前警察肖万被判22年6个月刑期](/articles/rfi/1027351.md)
 
 6-26 [拜登称赞两党在基础设施协议上达成妥协](/articles/rfi/1027352.md)
@@ -596,8 +600,4 @@
 6-21 [白俄罗斯强迫客机转降逮人 欧盟制裁主要产业 – 法国国际广播电台 - RFI](/articles/rfi/1027647.md)
 
 6-21 [法国大区选举弃权率何以创历史新高？ - 要闻解说](/articles/rfi/1027648.md)
-
-6-21 [高敬文 : 西方面临中共的强大挑战](/articles/rfi/1027649.md)
-
-6-21 [阿联酋与沙特政府眼中钉 人权活动家伦敦车祸身亡](/articles/rfi/1027650.md)
 
