--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-26 [美公布不明空中现象报告 未排除外星来源可能性 – 法国国际广播电台 - RFI](/articles/rfi/1027347.md)
+
 6-26 [澳大利亚柯林斯号潜艇停泊凯恩斯因应南海局势](/articles/rfi/1027348.md)
 
 6-26 [新冠病毒来源论 权威柳叶刀是否变成谄媚北京《有用白痴》 法媒提问 - 中华世界](/articles/rfi/1027349.md)
@@ -598,6 +600,4 @@
 6-21 [缅甸示威民众头戴鲜花庆生 翁山苏姬表示感谢 – 法国国际广播电台 - RFI](/articles/rfi/1027645.md)
 
 6-21 [德国对苹果展开反垄断调查 – 法国国际广播电台 - RFI](/articles/rfi/1027646.md)
-
-6-21 [白俄罗斯强迫客机转降逮人 欧盟制裁主要产业 – 法国国际广播电台 - RFI](/articles/rfi/1027647.md)
 
