--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-26 [德国前外长：孤立中国的想法荒谬](/articles/dw/1041731.md)
+
+6-26 [深度解读：为什么澳洲和中国为了大堡礁起争执？](/articles/dw/1041732.md)
+
 6-26 [中国年轻人为什么要入党？](/articles/dw/1041733.md)
 
 6-26 [亲历奥兰多枪击案后 她成为急救员](/articles/dw/1041734.md)
@@ -596,8 +600,4 @@
 6-9 [德国出口持续增长 涨幅不及预期](/articles/dw/1042029.md)
 
 6-9 [好萌好温馨！ 云南野象群高清睡姿曝光](/articles/dw/1042030.md)
-
-6-9 [德国一周大小事](/articles/dw/1042031.md)
-
-6-9 [馬克龍親民握手卻遭「打臉」](/articles/dw/1042032.md)
 
