--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-26 [木屐不是日本发明的？中国二千年鞋履潮流源远流长](/articles/rfi/1027322.md)
+
+6-26 [美国政府发布备受瞩目的UFO报告 有没有外星人无定论](/articles/rfi/1027323.md)
+
+6-26 [香港进行重大人事调整，媒体受控 - 法国报纸摘要](/articles/rfi/1027324.md)
+
+6-26 [南海局势升温，美国成功出售菲律宾之前不想买的25亿美元军火 - 要闻解说](/articles/rfi/1027325.md)
+
+6-26 [一只陨落的苹果宣告一国两制终结 - 微言微语](/articles/rfi/1027326.md)
+
 6-26 [办欧国杯赛事  圣彼得堡新增染疫死创俄国最高 – 法国国际广播电台 - RFI](/articles/rfi/1027327.md)
 
 6-26 [Delta变种病毒猖獗 孟加拉下周实施严格封城 – 法国国际广播电台 - RFI](/articles/rfi/1027328.md)
@@ -590,14 +600,4 @@
 6-22 [法国地方选举后果 马克龙对决勒庞前景破局？ - 要闻分析](/articles/rfi/1027620.md)
 
 6-22 [伊朗核电厂似进行维修 暂时关闭 – 法国国际广播电台 - RFI](/articles/rfi/1027621.md)
-
-6-22 [陷入绝境的香港《苹果日报》，依然高昂着头 - 法国世界报](/articles/rfi/1027622.md)
-
-6-22 [法国地方选举后果 马克龙对决勒庞前景破局？](/articles/rfi/1027623.md)
-
-6-22 [美股反弹 道指飙涨近600点 – 法国国际广播电台 - RFI](/articles/rfi/1027624.md)
-
-6-22 [刚果和中国同意谈判，以重组刚果欠北京的巨额债务](/articles/rfi/1027625.md)
-
-6-22 [欧美联手对白俄罗斯实施新一轮&quot;强力&quot;制裁 反动派称赞&quot;史无前例&quot;](/articles/rfi/1027626.md)
 
