--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-26 [特斯拉中国召回逾28万辆进口和国产电动车 称将完善和提升安全性](/articles/reuters/1036433.md)
+
+6-26 [焦点：中国挖矿禁令迫使比特币矿主出走海外 或甩卖矿机](/articles/reuters/1036434.md)
+
 6-26 [东芝股东否决董事会主席永山治续任 社长纲川智将暂代主席](/articles/reuters/1036435.md)
 
 6-26 [中国国产疫苗对德尔塔变异毒株有效 老人及未成年人应加强接种--钟南山](/articles/reuters/1036436.md)
@@ -596,8 +600,4 @@
 6-18 [中国重要财经新闻一周回顾](/articles/reuters/1036731.md)
 
 6-18 [美国财长叶伦促G20成员国支持全球最低公司税率](/articles/reuters/1036732.md)
-
-6-18 [日本央行维持政策稳定 将推出应对气候变化的新计划](/articles/reuters/1036733.md)
-
-6-18 [李嘉诚长子旗下和黄医药回流香港上市，次子旗下FWD则远走他乡](/articles/reuters/1036734.md)
 
