--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-26 [各国实验室泄漏不断 历史教会我们什么？](/articles/voa/1039875.md)
+
+6-26 [考古学家发现现代人还有一个同宗分支--“龙人”](/articles/voa/1039876.md)
+
 6-26 [前雇员披露TikTok被字节跳动牢牢掌控](/articles/voa/1039877.md)
 
 6-26 [阿基诺三世葬礼周六举行，其抗中勇气受到国内外的赞扬](/articles/voa/1039878.md)
@@ -596,8 +600,4 @@
 6-12 [中国神秘科技公司被拜登放行遭美国智库质疑](/articles/voa/1040173.md)
 
 6-12 [伊朗与世界大国周六举行新一轮谈判，讨论恢复2015年伊核协议](/articles/voa/1040174.md)
-
-6-12 [中国通过反外国制裁法 美在华企夹缝中求生存](/articles/voa/1040175.md)
-
-6-12 [香港民主活动人士周庭获释出狱](/articles/voa/1040176.md)
 
