--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-27 [【旧闻重温】暖壶人 | 不要在回民家里吃猪肉 vs 打破宗教禁锢追求美食自由](/articles/cdt/381018.md)
+
 6-27 [【网络民议】鼓励顺产是为了缩短生产周期？真当人是母猪了](/articles/cdt/381021.md)
 
 6-26 [小银 | 与 Ben Mauk聊聊新疆、哈萨克斯坦、中国和暴力](/articles/cdt/381024.md)
@@ -598,6 +600,4 @@
 5-20 [小弦的自留地｜第二次开庭前，法庭内外发生的一切](/articles/cdt/382348.md)
 
 5-20 [谷雨实验室｜四个杂技少年的“失败”逃跑](/articles/cdt/382349.md)
-
-5-20 [【图说天朝】佟丽娅、陈思诚520官宣离婚 “#撤热搜被撤热搜”](/articles/cdt/382364.md)
 
