--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-27 [伊朗：恢复核协议有可能，但“不会永远谈判”](/articles/voa/1039872.md)
+
+6-27 [美国太平洋西北地区正在经受热浪袭击](/articles/voa/1039873.md)
+
 6-27 [新冠病毒溯源研究三项新发现：条条不利中共掩盖真相的努力](/articles/voa/1039874.md)
 
 6-26 [各国实验室泄漏不断 历史教会我们什么？](/articles/voa/1039875.md)
@@ -596,8 +600,4 @@
 6-13 [阿富汗首都爆炸炸死七人](/articles/voa/1040170.md)
 
 6-13 [七国集团似乎在对抗中国的策略上存在分歧](/articles/voa/1040171.md)
-
-6-13 [美俄首脑下周会晤日内瓦, “职业男”与“杀手”期待见面](/articles/voa/1040172.md)
-
-6-12 [中国神秘科技公司被拜登放行遭美国智库质疑](/articles/voa/1040173.md)
 
