--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-27 [对抗还是对话？美国当前对华政策与共识究竟为何？](/articles/voa/1039869.md)
+
 6-27 [土耳其启动连接黑海和地中海的运河工程](/articles/voa/1039870.md)
 
 6-27 [国务卿布林肯即将访问意大利](/articles/voa/1039871.md)
@@ -598,6 +600,4 @@
 6-13 [G-7领导人誓言不再重蹈覆辙](/articles/voa/1040167.md)
 
 6-13 [德州奥斯汀枪击打伤13人](/articles/voa/1040168.md)
-
-6-13 [丹麦球员在欧洲杯比赛中倒地，比赛一度中断](/articles/voa/1040169.md)
 
