--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-27 [苹果日报：传港府允复刊条件是交出员工个人资料](/articles/rfi/1027277.md)
+
+6-27 [以色列外长访罗马 将会美国务卿布林肯 – 法国国际广播电台 - RFI](/articles/rfi/1027278.md)
+
 6-27 [龙的传人？中国发现新古代人种 称为人类起源研究提供新观点](/articles/rfi/1027279.md)
 
 6-27 [巴黎举行同性恋者自豪游行 从郊区进发](/articles/rfi/1027280.md)
@@ -596,8 +600,4 @@
 6-23 [【视频】:教科文提议将大堡礁列为濒临危险世界自然遗产](/articles/rfi/1027575.md)
 
 6-23 [【视频】:也门让人着迷的地狱之井](/articles/rfi/1027576.md)
-
-6-23 [施打AZ疫苗后 梅克尔第二剂疫苗接种莫德纳 – 法国国际广播电台 - RFI](/articles/rfi/1027577.md)
-
-6-22 [瞄准复旦与铁路计划 匈牙利反对派宣布联手抗中](/articles/rfi/1027578.md)
 
