--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-1 [直播：中共庆祝建党百年，习近平将发表讲话](/articles/nyt/1046659.md)
+
 6-30 [港中大教授周保松：只要坚持抗争，香港的历史就不会结束](/articles/nyt/1046660.md)
 
 6-30 [在Nobu Malibu，与名人共度梦幻时光](/articles/nyt/1046661.md)
@@ -598,6 +600,4 @@
 4-16 [从香港、东非到加州：我家的全球疫苗接种故事](/articles/nyt/1046957.md)
 
 4-15 [我在阿富汗打过仗，我仍然不知道这是否值得](/articles/nyt/1046958.md)
-
-4-15 [美国气候特使克里访华，彰显白宫寻求合作意图](/articles/nyt/1046959.md)
 
