--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-1 [专访：习近平演说透露中共向外扩张的野心](/articles/dw/1041638.md)
+
 7-1 [中共建党百年 北京香港气氛迥异](/articles/dw/1041639.md)
 
 7-1 [加参院未通过新疆种族灭绝动议 政界意见不同](/articles/dw/1041640.md)
@@ -598,6 +600,4 @@
 6-15 [病毒起源八卦满天飞 石正丽:我没做错](/articles/dw/1041936.md)
 
 6-15 [湖北气爆25死逾百伤 国务院安委会挂牌督办](/articles/dw/1041937.md)
-
-6-15 [北约将中国定义为“体制性挑战”](/articles/dw/1041938.md)
 
