--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-1 [缅甸释放反政变抗议人士 2000多人重获自由 – 法国国际广播电台 - RFI](/articles/rfi/1027049.md)
+
 7-1 [天才老爹性侵案大逆转 比尔寇斯比获释 – 法国国际广播电台 - RFI](/articles/rfi/1027050.md)
 
 7-1 [NBA太阳击败快艇 打进总冠军赛 – 法国国际广播电台 - RFI](/articles/rfi/1027051.md)
@@ -598,6 +600,4 @@
 6-26 [美公布不明空中现象报告 未排除外星来源可能性 – 法国国际广播电台 - RFI](/articles/rfi/1027347.md)
 
 6-26 [澳大利亚柯林斯号潜艇停泊凯恩斯因应南海局势](/articles/rfi/1027348.md)
-
-6-26 [新冠病毒来源论 权威柳叶刀是否变成谄媚北京《有用白痴》 法媒提问 - 中华世界](/articles/rfi/1027349.md)
 
