--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-1 [【网络民议】今天全部拉清单！选秀艺人转发建党百年庆微博统计](/articles/cdt/380850.md)
+
 7-1 [【图说天朝】今早的微博热搜前50条均与建党百年有关](/articles/cdt/380859.md)
 
 7-1 [德国之声 | 前党校教授：中美价值观对立  对抗难以避免](/articles/cdt/380861.md)
@@ -598,6 +600,4 @@
 5-25 [【旧闻重温】阮耀钟 | 请慎用“正能量” ──一个物理学家的担忧](/articles/cdt/382251.md)
 
 5-24 [【立此存照】袁隆平离世前家人高唱我的祖国 血压心率一度回升](/articles/cdt/382258.md)
-
-5-24 [小声比比｜把孩子当犯人管，这届家长真的让我害怕](/articles/cdt/382259.md)
 
