--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-1 [加拿大原住民寄宿学校的残酷历史](/articles/dw/1041637.md)
+
 7-1 [专访：习近平演说透露中共向外扩张的野心](/articles/dw/1041638.md)
 
 7-1 [中共建党百年 北京香港气氛迥异](/articles/dw/1041639.md)
@@ -598,6 +600,4 @@
 6-15 [北约公报点名中俄 吁盟国共同应战](/articles/dw/1041935.md)
 
 6-15 [病毒起源八卦满天飞 石正丽:我没做错](/articles/dw/1041936.md)
-
-6-15 [湖北气爆25死逾百伤 国务院安委会挂牌督办](/articles/dw/1041937.md)
 
