--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+7-1 [革命、动荡与控制：图片中的中共百年历史](/articles/nyt/1046655.md)
+
+7-1 [想活得更久？你可以考虑冷冻自己](/articles/nyt/1046656.md)
+
 7-1 [滴滴赴美上市，增长和监管隐忧犹存](/articles/nyt/1046657.md)
 
 7-1 [中国被世卫组织认证为无疟疾国家](/articles/nyt/1046658.md)
@@ -596,8 +600,4 @@
 4-16 [黎智英被判一年监禁，李柱铭获缓刑](/articles/nyt/1046953.md)
 
 4-16 [摩擦重重的中美能合作应对气候挑战吗？](/articles/nyt/1046954.md)
-
-4-16 [中国一季度GDP增18.3%，消费者仍捂紧钱包](/articles/nyt/1046955.md)
-
-4-16 [日本会对抗中国吗？菅义伟访美或将传递信号](/articles/nyt/1046956.md)
 
