--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-1 [中共百年党庆 凸显强烈民族主义政党信号](/articles/rfa/1045175.md)
+
 7-1 [习近平谈台湾 首次对外发话警告勿低估其决心和能力](/articles/rfa/1045176.md)
 
 7-1 [习近平强调中国人不可欺 学者：警告西方中国有能力还击](/articles/rfa/1045177.md)
@@ -598,6 +600,4 @@
 5-28 [大午案庭前会议结束  孙大午痛哭愿承担一切罪责](/articles/rfa/1045473.md)
 
 5-28 [异议青年王靖渝迪拜获释   美国关注中国人权](/articles/rfa/1045474.md)
-
-5-28 [独立学者王康逝世一周年之际 纪念文集在美出版](/articles/rfa/1045475.md)
 
