--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-1 [藏人团体:中共建党百年里面有西藏70年血泪史](/articles/rfi/1027028.md)
+
 7-1 [日本官房长官：希望中国负起大国责任](/articles/rfi/1027029.md)
 
 7-1 [黎市府拟挹注5940万欧元恢复埃菲尔铁塔魅力吸引观光客 - 法国风光](/articles/rfi/1027030.md)
@@ -598,6 +600,4 @@
 6-26 [一只陨落的苹果宣告一国两制终结 - 微言微语](/articles/rfi/1027326.md)
 
 6-26 [办欧国杯赛事  圣彼得堡新增染疫死创俄国最高 – 法国国际广播电台 - RFI](/articles/rfi/1027327.md)
-
-6-26 [Delta变种病毒猖獗 孟加拉下周实施严格封城 – 法国国际广播电台 - RFI](/articles/rfi/1027328.md)
 
