--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+7-2 [戴妃铜像肯辛顿宫揭幕 威廉哈里再聚首 能和解吗？](/articles/rfi/1027013.md)
+
 7-2 [普吉岛开放 首批免检疫国际游客降临](/articles/rfi/1027014.md)
 
 7-1 [中共百年寿诞 硬币另一面](/articles/rfi/1027015.md)
@@ -598,6 +600,4 @@
 6-27 [布林肯：美欧在对待中国的问题上是趋于一致的](/articles/rfi/1027311.md)
 
 6-27 [拉舍特反对和中国打冷战](/articles/rfi/1027312.md)
-
-6-27 [美媒：中国以停供疫苗迫使乌克兰撤出新疆人权声明](/articles/rfi/1027313.md)
 
