--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+7-2 [国际知名中国学者：中共面临统治危机 美国应做好应对预案](/articles/rfa/1045167.md)
+
+7-2 [北京党庆日世界声援香港  中国战狼反击](/articles/rfa/1045168.md)
+
 7-2 [国际国内两重天：一边大肆庆祝   一边七成民众不信任习近平](/articles/rfa/1045169.md)
 
 7-2 [法国学者 : 中国共产党价值观只剩空壳](/articles/rfa/1045170.md)
@@ -596,8 +600,4 @@
 5-29 [欧盟日本领袖峰会推动印太战略  日外相访中东欧寻求支持](/articles/rfa/1045465.md)
 
 5-28 [中国对台霸凌    掀美国社媒挺台湾热潮](/articles/rfa/1045466.md)
-
-5-28 [禁止进口废纸五个月  中国纸价格每月上涨](/articles/rfa/1045467.md)
-
-5-28 [3名脱疆者申请哈国公民遭拒   遣返中国后恐面临酷刑折磨](/articles/rfa/1045468.md)
 
