--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,18 @@
 纽约时报
 ------
 
+7-6 [永远离开我之前，她把所有的爱装进盒子](/articles/nyt/1046631.md)
+
+7-6 [新冠病毒来自于实验室吗？](/articles/nyt/1046632.md)
+
+7-6 [新冠病毒“实验室泄漏说”背后真正的丑闻](/articles/nyt/1046633.md)
+
+7-6 [武汉病毒所石正丽驳斥实验室泄漏说](/articles/nyt/1046634.md)
+
+7-6 [中国否认台山核电站辐射泄漏，承认燃料棒受损](/articles/nyt/1046635.md)
+
+7-6 [不明肺炎、禁言医生：被掩盖的苏联实验室炭疽泄漏往事](/articles/nyt/1046636.md)
+
 7-6 [中国体制建立在谎言上，它无法埋葬自由世界](/articles/nyt/1046637.md)
 
 7-6 [美国科技巨头质疑港府推进修改数据安全法](/articles/nyt/1046638.md)
@@ -588,16 +600,4 @@
 4-26 [女权人士在中国互联网上遭遇封禁和攻击](/articles/nyt/1046929.md)
 
 4-26 [从香港、东非到加州：我家的全球疫苗接种故事](/articles/nyt/1046930.md)
-
-4-26 [赵婷再创历史，获奥斯卡最佳导演奖](/articles/nyt/1046931.md)
-
-4-23 [漫长而残酷的20年：一文详解阿富汗战争](/articles/nyt/1046932.md)
-
-4-23 [“你只能活一次”：疫情让千禧一代拥抱冒险经济](/articles/nyt/1046933.md)
-
-4-23 [为享受更多婚假，台湾夫妇37天内结婚四次离婚三次](/articles/nyt/1046934.md)
-
-4-23 [“生命太短暂”：男子突发心脏病后写“心灵鸡汤”走红网络](/articles/nyt/1046935.md)
-
-4-23 [香港媒体遭遇正面攻击，记者成为当局新目标](/articles/nyt/1046936.md)
 
