--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-6 [港警国安处控「港独组织」策划炸弹攻击 拘捕九人](/articles/dw/1041554.md)
+
 7-6 [香港维他奶股价暴跌 哀悼「孤狼」有罪](/articles/dw/1041555.md)
 
 7-6 [滴滴被下架後  在美上市的中国科技公司也遭审查](/articles/dw/1041556.md)
@@ -598,6 +600,4 @@
 6-19 [德语媒体：不是拜登的应声虫！](/articles/dw/1041852.md)
 
 6-19 [七张图看一周大事](/articles/dw/1041853.md)
-
-6-19 [深圳盐田港货船拥堵 专家忧殃及全球贸易](/articles/dw/1041854.md)
 
