--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+7-6 [东京奥运开幕式 传改以无观众方式举行 – 法国国际广播电台 - RFI](/articles/rfi/1026755.md)
+
+7-6 [16个球季漫长等待 保罗准备好争生涯首冠 – 法国国际广播电台 - RFI](/articles/rfi/1026756.md)
+
+7-6 [日本土石流浩劫 失联人数升至29 – 法国国际广播电台 - RFI](/articles/rfi/1026757.md)
+
+7-6 [沙国王子被控奴役巴黎豪宅7帮佣 法国检方调查 – 法国国际广播电台 - RFI](/articles/rfi/1026758.md)
+
+7-6 [传东奥开幕式改无观众 只放行VIP – 法国国际广播电台 - RFI](/articles/rfi/1026759.md)
+
+7-6 [飞进美驻巴格达使馆上空 武装无人机遭美军击落 – 法国国际广播电台 - RFI](/articles/rfi/1026760.md)
+
 7-6 [芬兰挪威飙出摄氏近34度高温 – 法国国际广播电台 - RFI](/articles/rfi/1026761.md)
 
 7-6 [第75届阿维尼翁戏剧节开幕 葡裔欧洲主义者官宣下任总监](/articles/rfi/1026762.md)
@@ -588,16 +600,4 @@
 7-1 [默克尔被指在中俄问题上误判](/articles/rfi/1027053.md)
 
 7-1 [《维也纳报》 ：中共走到了权力巅峰](/articles/rfi/1027054.md)
-
-7-1 [前中共党校教授蔡霞 美国应为中共政权突然崩溃做好预案](/articles/rfi/1027055.md)
-
-7-1 [香港弥漫恐怖气氛 支联会副主席邹幸彤再遭捕](/articles/rfi/1027056.md)
-
-7-1 [美国航空航天局：永远不允许中国参与国际空间站研究项目](/articles/rfi/1027057.md)
-
-7-1 [印度版阿斯利康疫苗欧盟不接受](/articles/rfi/1027058.md)
-
-7-1 [民调显示多国民众对中国看法负面](/articles/rfi/1027059.md)
-
-7-1 [中共党庆要面子 外国政要贺电有多少](/articles/rfi/1027060.md)
 
