--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+7-6 [深圳明年起禁止APP“不全面授权就不让用” 明确不能强制使用人脸识别](/articles/reuters/1036085.md)
+
 7-6 [港交所决定缩短IPO结算周期最早2022年末季实施T+2 巩固全球集资地位](/articles/reuters/1036086.md)
 
 7-6 [德银推出一套追踪21种新兴市场货币的外汇指数](/articles/reuters/1036087.md)
@@ -598,6 +600,4 @@
 6-29 [日本防卫副大臣称有必要觉醒 将台湾作为“一个民主国家”加以保护](/articles/reuters/1036383.md)
 
 6-29 [中国叮咚买菜将美国IPO筹资目标削减70%以上](/articles/reuters/1036384.md)
-
-6-29 [焦点：没有最高只有更高？ 飙升的运价成为中国外贸企业“不能承受之重”](/articles/reuters/1036385.md)
 
