--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-6 [新冠溯源：一位法国基因研究学者的重重疑问](/articles/rfi/1026721.md)
+
+7-6 [法新统计：全球逾1亿8410万人染疫 至少398万人丧生 – 法国国际广播电台 - RFI](/articles/rfi/1026722.md)
+
+7-6 [巴黎市容脏乱网路骂声一片 市府推措施整顿 – 法国国际广播电台 - RFI](/articles/rfi/1026723.md)
+
 7-6 [教皇方济各术后恢复好：今天吃了早饭看了报纸走了几步](/articles/rfi/1026724.md)
 
 7-6 [WTI油价创2014年来最高纪录 – 法国国际广播电台 - RFI](/articles/rfi/1026725.md)
@@ -594,10 +600,4 @@
 7-1 [Delta疫情恐伤经济复苏 亚股多数收低 – 法国国际广播电台 - RFI](/articles/rfi/1027019.md)
 
 7-1 [防疫优先 萨摩亚3名举重选手退出东奥 – 法国国际广播电台 - RFI](/articles/rfi/1027020.md)
-
-7-1 [全球疫情逾1亿8213万人染疫  近395万人丧生 – 法国国际广播电台 - RFI](/articles/rfi/1027021.md)
-
-7-1 [金球奖允许外语片和动画片角逐最佳影片 – 法国国际广播电台 - RFI](/articles/rfi/1027022.md)
-
-7-1 [“利刃”换“新月沙丘”：法军非洲反恐重大调整间隙的安全隐患](/articles/rfi/1027023.md)
 
