--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-7 [我知道我什么都不知道 | 彩虹的颜色消失，变成统一的红色](/articles/cdt/380604.md)
+
+7-7 [@阁楼上的宗城：未命名的事物值得拥有高尚的墓志铭，而不是沉默的死去。](/articles/cdt/380606.md)
+
+7-7 [恰帕斯东风Radio | 投稿：今晚我们都是“未命名公众号”](/articles/cdt/380618.md)
+
+7-7 [【网络民议】未命名公众号，未命名群体，未命名的爱——中国高校性少数社团公众号遭批量永封 ​​​](/articles/cdt/380637.md)
+
 7-6 [【网络民议】自由是一点一点失去的，最后就突然意识到都没了](/articles/cdt/380650.md)
 
 7-6 [立场新闻｜香港电影金像奖最佳影片《十年》月底将从Netflix下架](/articles/cdt/380652.md)
@@ -592,12 +600,4 @@
 5-29 [山河路人 | 中国写歌最多的奇才，要你为祖国生二胎](/articles/cdt/382066.md)
 
 5-29 [东亚评论｜东亚的年轻人，都不生了……](/articles/cdt/382068.md)
-
-5-28 [品葱｜躺平主义和加速主义，哪个对当今社会冲击更大？](/articles/cdt/382076.md)
-
-5-28 [新华社｜中央宣传部、中央网信办等部署重点建设高校思政类公众号](/articles/cdt/382078.md)
-
-5-28 [人生研究所｜电击孕妇、蹂躏少女，杨永信又卷土重来：到底是谁在纵容他？](/articles/cdt/382081.md)
-
-5-28 [【立此存照】共青团微博号召年轻人不要“躺平” 反被呛“涨资产阶级士气、灭无产阶级威风”](/articles/cdt/382089.md)
 
