--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+7-7 [布林肯会新疆再教育营幸存者  拜习会终将举行](/articles/rfa/1045136.md)
+
+7-7 [滴滴风波未平      微博被曝暗寻私有化退市](/articles/rfa/1045137.md)
+
+7-7 [五百多中国留学生赴美签证被拒    均学敏感专业](/articles/rfa/1045138.md)
+
 7-7 [法德中峰会  中国媒体称法德支持欧中投资协定](/articles/rfa/1045139.md)
 
 7-7 [“七五”事件十二周年 旧金山多族裔集会游行](/articles/rfa/1045140.md)
@@ -594,10 +600,4 @@
 6-2 [唐吉田赴日陪护女儿  福州机场出境被拦截](/articles/rfa/1045434.md)
 
 6-2 [习近平重提“说好中国故事”  分析:为洗白疫情责任掌控内宣](/articles/rfa/1045435.md)
-
-6-2 [港府全方位阻止港人悼念   六四纪念馆被逼关闭](/articles/rfa/1045436.md)
-
-6-2 [微博大V“辣笔小球” 因“诋毁英雄烈士”罪被判入狱八个月](/articles/rfa/1045437.md)
-
-6-2 [中国“三孩时代”年轻人的纠结：一个都不想生](/articles/rfa/1045438.md)
 
