--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,11 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
-7-21 [红星新闻 | 困在河南特大暴雨中的人：“水涨得太快，一切都来不及”](/articles/cdt/380102.md)
+7-21 [七使2020 | 郑州洪灾，水库溃坝：我们要真相，不要糊涂账](/articles/cdt/380093.md)
+
+7-21 [关键评论 | 韩炳哲《精神政治学》书评：当自由不再是权利而是权力时](/articles/cdt/380097.md)
+
+7-21 [红星新闻｜困在河南特大暴雨中的人：“水涨得太快，一切都来不及”](/articles/cdt/380102.md)
 
 7-21 [岛读世界 | 港人赶在午夜钟响前 排队登机飞英国](/articles/cdt/380104.md)
 
@@ -596,8 +600,4 @@
 6-12 [书单君｜讲真，“土猪”越火，我越佩服罗翔](/articles/cdt/381499.md)
 
 6-12 [骚客文艺｜头骨厚的人，看谁都像汉奸](/articles/cdt/381500.md)
-
-6-12 [【CDT周报】第二十一期：昨日挺港警打废青不论孰是孰非，今朝争学历挨铁拳勿忘爱国爱党](/articles/cdt/381503.md)
-
-6-11 [立场新闻 | “生为维吾尔人就是罪” 一个新疆再教育营受害者的证词](/articles/cdt/381505.md)
 
