--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+7-21 [郑州暴雨引发洪灾，至少12人死亡](/articles/nyt/1046560.md)
+
+7-21 [为什么说美国应该害怕中国对科技业的打压](/articles/nyt/1046561.md)
+
 7-21 [简报：郑州暴雨已致12人死亡；吴亦凡被指“诱奸”少女引发公愤](/articles/nyt/1046562.md)
 
 7-20 [光州阴谋论、“历史扭曲”和韩国言论自由之争](/articles/nyt/1046563.md)
@@ -596,8 +600,4 @@
 5-17 [多年平静后，巴以冲突为何现在突然爆发？](/articles/nyt/1046858.md)
 
 5-17 [月球、空间站与火星：详解中国太空雄心](/articles/nyt/1046859.md)
-
-5-17 [汉堡快“灭绝”了吗？](/articles/nyt/1046860.md)
-
-5-17 [关于“天问一号”火星着陆：你需要了解的五个问题](/articles/nyt/1046861.md)
 
