--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-21 [【图说天朝】“天灾”无情，更令人失望的是它们的反应](/articles/cdt/380092.md)
+
 7-21 [七使2020 | 郑州洪灾，水库溃坝：我们要真相，不要糊涂账](/articles/cdt/380093.md)
 
 7-21 [关键评论 | 韩炳哲《精神政治学》书评：当自由不再是权利而是权力时](/articles/cdt/380097.md)
@@ -598,6 +600,4 @@
 6-12 [学问批判｜“非升即走”能承担这不是由它造成的生命之重么？](/articles/cdt/381498.md)
 
 6-12 [书单君｜讲真，“土猪”越火，我越佩服罗翔](/articles/cdt/381499.md)
-
-6-12 [骚客文艺｜头骨厚的人，看谁都像汉奸](/articles/cdt/381500.md)
 
