--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-21 [【旧闻重温】大河报｜郑州投入534亿元打造城市”海绵” 告别看海](/articles/cdt/380075.md)
+
 7-21 [在人间｜困在郑州暴雨中](/articles/cdt/380077.md)
 
 7-21 [观人随笔｜郑州暴雨，一个关键细节](/articles/cdt/380079.md)
@@ -11,7 +13,7 @@
 
 7-21 [【图说天朝】“天灾”无情，更令人失望的是它们的反应](/articles/cdt/380092.md)
 
-7-21 [七使2020 | 郑州洪灾，水库溃坝：我们要真相，不要糊涂账](/articles/cdt/380093.md)
+7-21 [【404文库】七使2020 | 郑州洪灾，水库溃坝：我们要真相，不要糊涂账](/articles/cdt/380093.md)
 
 7-21 [关键评论 | 韩炳哲《精神政治学》书评：当自由不再是权利而是权力时](/articles/cdt/380097.md)
 
@@ -598,6 +600,4 @@
 6-13 [【404文库】自由的海报 | 网络狂欢的背后：作为亚文化符号的“张献忠”](/articles/cdt/381487.md)
 
 6-12 [安猪 | 一只猪的生活意见：与其拱白菜，不如特立独行](/articles/cdt/381489.md)
-
-6-12 [反向阅读 | “负面人物，有争议人物，坚决停用”](/articles/cdt/381491.md)
 
