--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-21 [太阳挡不住安特托昆博 公鹿50年后再圆总冠军梦 – 法国国际广播电台 - RFI](/articles/rfi/1025856.md)
+
+7-21 [法国药品安全局暂停中国一款新冠抗原测试进口与投放](/articles/rfi/1025857.md)
+
 7-21 [强制检查新冠护照：满50人的法国文娱等场所正式开始](/articles/rfi/1025858.md)
 
 7-21 [联合国世界遗产大会 利物浦和大堡礁受关注 - 文化遗产](/articles/rfi/1025859.md)
@@ -596,8 +600,4 @@
 7-16 [孙大午案今开庭，被告们健康不佳，与检察方就证据与法律有巨大争论](/articles/rfi/1026154.md)
 
 7-16 [美国启动立法程序禁止进口新疆产品](/articles/rfi/1026155.md)
-
-7-16 [法国影星凯瑟琳丹妮芙母亲过世 享寿109岁 – 法国国际广播电台 - RFI](/articles/rfi/1026156.md)
-
-7-16 [陷禁药疑云 巴林胜利车队环法赛惊传遭警方搜索 – 法国国际广播电台 - RFI](/articles/rfi/1026157.md)
 
