--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-21 [布里斯班获2032年奥运会主办权](/articles/dw/1041277.md)
+
 7-21 [美国副国务卿谢尔曼本周访华](/articles/dw/1041278.md)
 
 7-21 [“历史美感不再“ 利物浦被从世界遗产名录中剔除](/articles/dw/1041279.md)
@@ -598,6 +600,4 @@
 7-5 [欧中投资协定卡关  欧盟驻华外交官齐发声](/articles/dw/1041575.md)
 
 7-5 [遭扣三个月後 「长赐号」终将驶离苏伊士运河](/articles/dw/1041576.md)
-
-7-5 [忧国安法效力 多个香港民间组织宣布解散](/articles/dw/1041577.md)
 
