--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-22 [美军参谋首长：塔利班似已取得「战略势头」 – 法国国际广播电台 - RFI](/articles/rfi/1025810.md)
+
+7-22 [瑞典2囚挟持守卫 勒赎20个披萨和直升机 – 法国国际广播电台 - RFI](/articles/rfi/1025811.md)
+
 7-22 [美基建法案遭参院共和党阻挠  两党称妥协已在望 – 法国国际广播电台 - RFI](/articles/rfi/1025812.md)
 
 7-22 [美德就北溪2号天然气管道达成协议 基辅华沙表示反对](/articles/rfi/1025813.md)
@@ -596,8 +600,4 @@
 7-17 [西欧再降豪雨 洪灾死亡增至126人 – 法国国际广播电台 - RFI](/articles/rfi/1026108.md)
 
 7-16 [法国司法部长任内被起诉 史无前例](/articles/rfi/1026109.md)
-
-7-16 [关闭9个月创战后纪录 巴黎铁塔恢复开放 – 法国国际广播电台 - RFI](/articles/rfi/1026110.md)
-
-7-16 [违反印度社群媒体新规  WhatsApp封锁逾200万用户 – 法国国际广播电台 - RFI](/articles/rfi/1026111.md)
 
