--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+7-26 [足以致命的极端天气撼动世界](/articles/dw/1041199.md)
+
+7-26 [中国指责美国应为两国关系陷入僵局负责](/articles/dw/1041200.md)
+
+7-26 [台积电证实有意赴德国设厂](/articles/dw/1041201.md)
+
+7-26 [普京：俄海军有能力发动 “无法预防的 “打击](/articles/dw/1041202.md)
+
 7-26 [客座评论：由郑州洪灾看习政权的阿喀琉斯之踵](/articles/dw/1041203.md)
 
 7-26 [中国整顿补教业 禁培训机构上市融资](/articles/dw/1041204.md)
@@ -592,12 +600,4 @@
 7-9 [欧洲议会吁官员抵制北京冬奥  中国批「把运动政治化」](/articles/dw/1041497.md)
 
 7-9 [香港区议员宣誓在即 港媒：恐有230人遭DQ](/articles/dw/1041498.md)
-
-7-8 [东京进入紧急状态 奥运赛事闭门举行](/articles/dw/1041499.md)
-
-7-8 [韩国疫情：单日感染人数激增](/articles/dw/1041500.md)
-
-7-8 [英国议员呼吁抵制北京冬奥 调查新疆“种族灭绝”暴行](/articles/dw/1041501.md)
-
-7-8 [联手垄断：大众、宝马遭欧盟重罚十亿美元](/articles/dw/1041502.md)
 
