--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,26 @@
 路透
 ------
 
+9-24 [渣打银行对中国恒大没有直接敞口 间接敞口“可以忽略不计”--首席财务官](/articles/reuters/1033024.md)
+
+9-24 [美元创一个月最大单日百分比跌幅 因风险人气改善](/articles/reuters/1033025.md)
+
+9-24 [美股三大指数收涨逾1% 市场对美联储缩减购债和加息立场感到释然](/articles/reuters/1033026.md)
+
+9-24 [油价升至两个月高位 受燃料需求增加和原油库存减少支撑](/articles/reuters/1033027.md)
+
+9-24 [金价跌1% 因公债收益率上升和美联储提前升息忧虑](/articles/reuters/1033028.md)
+
+9-24 [路透测算的人民币中间价料开在6.4595元附近 较上日升154点](/articles/reuters/1033029.md)
+
+9-24 [独家：英国央行副总裁伍兹审慎乐观认为恒大危机不会恶化](/articles/reuters/1033030.md)
+
+9-24 [综述：恒大海外债周四按期付息希望渺茫 债券持有者等待情势明朗](/articles/reuters/1033031.md)
+
+9-24 [中诚信下调苏宁易购主体及债项评级至AA+ 指盈利大幅下降偿债指标偏弱](/articles/reuters/1033032.md)
+
+9-24 [阿里巴巴旗下天猫称未来五年投入百亿元 孵化2,000个潜力新品牌](/articles/reuters/1033033.md)
+
 9-23 [台湾正式递件申请加入CPTPP 国台办称反对民进党以经贸为由谋“独”](/articles/reuters/1033034.md)
 
 9-23 [大众汽车在合肥新建电池系统工厂 推进在华新能源车型超40%的目标](/articles/reuters/1033035.md)
@@ -580,24 +600,4 @@
 9-16 [油价跳涨逾2美元 上周美国原油库存降至2019年9月以来最低](/articles/reuters/1033322.md)
 
 9-16 [美股三大股指皆收高 油价急升提振能源股且强劲经济数据带动普涨](/articles/reuters/1033323.md)
-
-9-16 [金价跌穿1,800美元 投资者寻找有关美联储缩减路径的线索](/articles/reuters/1033324.md)
-
-9-15 [美谷物贸易商ADM在浙江开设调味料生产厂 满足日益增长的需求](/articles/reuters/1033325.md)
-
-9-15 [分析师观点：深化金融开放中国启动债券“南向通” 中资美元债迎利好](/articles/reuters/1033326.md)
-
-9-15 [中国债市“南向通”24日上线年额度5,000亿元 投资者为公开市场一级交易商等](/articles/reuters/1033327.md)
-
-9-15 [人民币随中间价收创近三个月新高 一年期掉期自高位继续回落](/articles/reuters/1033328.md)
-
-9-15 [朝鲜发射了两枚弹道导弹 中国外交部表示关注“坚持通过对话协商解决问题”](/articles/reuters/1033329.md)
-
-9-15 [标普将中国恒大及其子公司的评级下调至“CC” 因其流动性似已枯竭](/articles/reuters/1033330.md)
-
-9-15 [美团和饿了么禁止诱导和强迫骑手注册成个体工商户 推进职业伤害保障计划](/articles/reuters/1033331.md)
-
-9-15 [杨洁篪：希望美国纠正一段时期以来的错误对华政策 落实好两国元首共识](/articles/reuters/1033332.md)
-
-9-15 [韩国成功进行首次潜射弹道导弹试验--青瓦台](/articles/reuters/1033333.md)
 
