--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+4-17 [美中经济和金融工作组举行第四次会议](/articles/voa/1016326.md)
+
+4-17 [拜登政府公布最新举措应对中国钢铁倾销等“不公平”贸易](/articles/voa/1016327.md)
+
 4-17 [澳大利亚公布新国防战略 增加军费开支着眼中国威胁](/articles/voa/1016328.md)
 
 4-17 [所罗门群岛举行全国大选 美国驳斥中俄指其干涉选举的指控](/articles/voa/1016329.md)
@@ -596,8 +600,4 @@
 4-5 [乌克兰发动夜间无人机袭击，声称摧毁至少六架俄罗斯军机](/articles/voa/1016624.md)
 
 4-5 [世界媒体看中国 - 对美发送矛盾信号](/articles/voa/1016625.md)
-
-4-5 [中国核电快速发展 信息不透明带来安全隐患](/articles/voa/1016626.md)
-
-4-5 [台湾强震后救援持续进行 已累计有12人死亡](/articles/voa/1016627.md)
 
