--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-17 [应对美中冲突 澳大利亚大幅提升国防开支](/articles/dw/1025875.md)
+
 4-17 [德警方突袭犯罪团伙：向数百中国人“贩卖”签证](/articles/dw/1025876.md)
 
 4-17 [扩大制裁 美国计划全面回应伊朗空袭以色列](/articles/dw/1025877.md)
@@ -598,6 +600,4 @@
 3-23 [不顾美国警告 以色列执意袭击拉法](/articles/dw/1026173.md)
 
 3-23 [23条立法：周六正式上路 英澳促公民旅行要警惕](/articles/dw/1026174.md)
-
-3-23 [莫斯科恐袭案：西方多国亦表哀悼](/articles/dw/1026175.md)
 
