--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-17 [乌克兰战争中至少有5万名俄罗斯军人死亡](/articles/voa/1016324.md)
+
 4-17 [台湾智库团体兵推报告：台湾能源金融是短板，新加坡可望调停台海冲突](/articles/voa/1016325.md)
 
 4-17 [美中经济和金融工作组举行第四次会议](/articles/voa/1016326.md)
@@ -598,6 +600,4 @@
 4-5 [罔顾美国警告，太平洋岛国汤加称考虑接受中国安全协助惹关切](/articles/voa/1016622.md)
 
 4-5 [和解谈判陷僵局，美国针对华为的刑事案预计2026年开审](/articles/voa/1016623.md)
-
-4-5 [乌克兰发动夜间无人机袭击，声称摧毁至少六架俄罗斯军机](/articles/voa/1016624.md)
 
